--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -19,11 +19,12 @@
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@mipmap/ic_launcher" />
+            android:src="@drawable/login_user" />
 
         <EditText
             android:layout_width="230dp"
             android:layout_height="wrap_content"
+            android:id="@+id/login_username"
             android:hint="@string/login_username_hint" />
     </LinearLayout>
 
@@ -38,12 +39,38 @@
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@mipmap/ic_launcher" />
+            android:src="@drawable/login_password" />
 
         <EditText
             android:layout_width="230dp"
             android:layout_height="wrap_content"
+            android:background="@drawable/login_edittext"
+            android:id="@+id/login_password"
             android:hint="@string/login_username_hint" />
     </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:layout_marginTop="20dp"
+        android:gravity="center">
 
+        <Button
+            android:background="@drawable/login_register"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/login_register"/>
+        <EditText
+            android:layout_width="10dp"
+            android:layout_height="wrap_content" />
+        <Button
+            android:background="@drawable/login_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/login_button"/>
+
+    </LinearLayout>
+    <EditText
+        android:layout_width="230dp"
+        android:layout_height="wrap_content" />
 </LinearLayout>
