--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -8,14 +8,13 @@
     android:background="@drawable/welcome_background"
     tools:context="me.chiying.ching.WelcomeActivity">
 
-    <ImageView
-        android:textAlignment="center"
-        android:src="@drawable/welcome_text"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
 
     <ImageView
-        android:src="@drawable/welcome_button"
+        android:src="@drawable/welcome_icon"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+    <ImageView
+        android:src="@drawable/welcome_start"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
