--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -10,6 +10,7 @@
 
 
     <ImageView
+        android:id="@+id/welcome_image"
         android:src="@drawable/welcome_icon"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
