--- a/app/src/main/res/values/config.xml
+++ b/app/src/main/res/values/config.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="url">http://10.1.180.145:8080</string>
+    <!--<string name="url">http://10.1.180.145:8080</string>-->
+    <string name="url">http://192.168.43.85:8080</string>
 </resources>
