--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -112,6 +112,11 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/register_username"
                 android:hint="@string/login_username_hint" />
+            <Button
+                android:background="@color/color_524944"
+                android:text="@string/register_captcha_Button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
         </LinearLayout>
         <LinearLayout
             android:layout_marginTop="15dp"
@@ -141,12 +146,21 @@
             android:gravity="center">
 
             <Button
-                android:background="@drawable/login_button"
+                android:background="@drawable/login_register"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/register_button"/>
 
         </LinearLayout>
+
+        <TextView
+            android:id="@+id/register_login_text"
+            android:layout_marginTop="10dp"
+            android:gravity="center"
+            android:layout_gravity="center"
+            android:text="@string/register_login_Text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
 
     </LinearLayout>
 
