--- a/framelibrary/src/main/res/layout/loading_anim_text.xml
+++ b/framelibrary/src/main/res/layout/loading_anim_text.xml
@@ -6,10 +6,14 @@
     android:padding="10dp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
-
-    <!-- 不带文字的loading层 -->
+    <!-- 带文字的loading层 -->
     <ImageView
         android:id="@+id/loading_anim"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+    <TextView
+        android:id="@+id/loading_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
