主界面的fragment添加navigationBar

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -36,7 +36,7 @@
             android:layout_weight="1"
             android:button="@null"
             android:gravity="center"
-            android:drawableTop="@drawable/main_rb"
+            android:drawableTop="@drawable/features_rb"
             android:drawablePadding="3dp"
             android:layout_height="wrap_content"
             android:textColor="@color/main_selector"
@@ -49,7 +49,7 @@
             android:layout_weight="1"
             android:button="@null"
             android:gravity="center"
-            android:drawableTop="@drawable/main_rb"
+            android:drawableTop="@drawable/dynamic_rb"
             android:drawablePadding="3dp"
             android:layout_height="wrap_content"
             android:textColor="@color/main_selector"
@@ -62,7 +62,7 @@
             android:layout_weight="1"
             android:button="@null"
             android:gravity="center"
-            android:drawableTop="@drawable/main_rb"
+            android:drawableTop="@drawable/me_rb"
             android:drawablePadding="3dp"
             android:layout_height="wrap_content"
             android:textColor="@color/main_selector"
