--- a/framelibrary/src/main/res/drawable/loading_anim.xml
+++ b/framelibrary/src/main/res/drawable/loading_anim.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <animation-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@drawable/loading_png1" android:duration="150"></item>
-    <item android:drawable="@drawable/loading_png2" android:duration="150"></item>
-    <item android:drawable="@drawable/loading_png3" android:duration="150"></item>
-    <item android:drawable="@drawable/loading_png4" android:duration="150"></item>
-    <item android:drawable="@drawable/loading_png5" android:duration="150"></item>
-    <item android:drawable="@drawable/loading_png6" android:duration="150"></item>
+    <item android:drawable="@drawable/wait_loading1" android:duration="150"></item>
+    <item android:drawable="@drawable/wait_loading2" android:duration="150"></item>
+    <item android:drawable="@drawable/wait_loading3" android:duration="150"></item>
+    <item android:drawable="@drawable/wait_loading4" android:duration="150"></item>
+    <item android:drawable="@drawable/wait_loading5" android:duration="150"></item>
 </animation-list>
