--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -24,11 +24,13 @@
             android:orientation="horizontal">
 
             <ImageView
+                android:layout_marginRight="5dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/login_user" />
 
             <EditText
+                android:background="@drawable/login_username"
                 android:layout_width="230dp"
                 android:layout_height="wrap_content"
                 android:id="@+id/login_username"
@@ -43,6 +45,7 @@
             android:orientation="horizontal">
 
             <ImageView
+                android:layout_marginRight="5dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/login_password" />
