--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -19,49 +19,75 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="150dp"
-            android:layout_gravity="center_vertical"
-            android:gravity="center"
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="30dp"
+            android:padding="10dp"
+            android:background="@drawable/login_username"
             android:orientation="horizontal">
 
             <ImageView
                 android:layout_marginRight="5dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/login_user" />
+                android:scaleType="center"
+                android:scaleX="0.7"
+                android:scaleY="0.7"
+                android:background="@drawable/login_user" />
 
             <EditText
-                android:background="@drawable/login_username"
+                android:background="@null"
                 android:layout_width="230dp"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:padding="10dp"
+                android:textSize="12dp"
+                android:textColor="@color/white"
                 android:id="@+id/login_username"
                 android:hint="@string/login_username_hint" />
         </LinearLayout>
         <LinearLayout
-            android:layout_marginTop="15dp"
+            android:layout_margin="30dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:gravity="center"
+            android:padding="10dp"
+            android:background="@drawable/login_edittext"
             android:orientation="horizontal">
 
             <ImageView
                 android:layout_marginRight="5dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/login_password" />
+                android:scaleType="center"
+                android:scaleX="0.7"
+                android:scaleY="0.7"
+                android:background="@drawable/login_password" />
 
             <EditText
-                android:layout_width="230dp"
+                android:layout_width="0dp"
+                android:layout_weight="1"
                 android:layout_height="wrap_content"
-                android:background="@drawable/login_edittext"
+                android:inputType="textPassword"
+                android:layout_gravity="center"
+                android:padding="10dp"
+                android:textSize="12dp"
+                android:textColor="@color/white"
                 android:id="@+id/login_password"
-                android:hint="@string/login_username_hint" />
+                android:background="@null"
+                android:hint="@string/login_password_hint" />
+
+            <CheckBox
+                android:id="@+id/show_hide_pw_check"
+                android:button="@drawable/show_hide_password_selector"
+                android:layout_gravity="center"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:layout_marginTop="20dp"
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="30dp"
             android:gravity="center">
 
             <Button
@@ -71,20 +97,27 @@
                 android:id="@+id/login_button"/>
 
         </LinearLayout>
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
-            android:layout_gravity="center_vertical"
-            android:gravity="center">
+            android:layout_margin="30dp">
 
-            <Button
-                android:background="@drawable/login_register"
+            <TextView
+                android:text="@string/login_forgot_Text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textColor="@color/white"
+                android:id="@+id/login_forgot"/>
+
+            <TextView
+                android:layout_alignParentRight="true"
+                android:text="@string/login_register_Text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/white"
                 android:id="@+id/login_register"/>
 
-        </LinearLayout>
+        </RelativeLayout>
 
     </LinearLayout>
 
