--- a/framelibrary/src/main/res/layout/title_bar.xml
+++ b/framelibrary/src/main/res/layout/title_bar.xml
@@ -2,6 +2,9 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     style="@style/title_bar_style">
 
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
     <TextView
         android:id="@+id/back"
         style="@style/back_view" />
@@ -15,7 +18,6 @@
         android:layout_marginLeft="75.0dip"
         android:layout_marginRight="75.0dip"
         android:ellipsize="end"
-        android:singleLine="true"
         android:visibility="gone"
         />
 
