--- a/framelibrary/src/main/res/values/styles.xml
+++ b/framelibrary/src/main/res/values/styles.xml
@@ -29,7 +29,7 @@
 
     <style name="back_view" parent="@style/title_bar_button">
         <item name="android:gravity">center</item>
-        <item name="android:background">@drawable/btn_back</item>
+        <item name="android:background">@null</item>
         <item name="android:paddingLeft">0.0dip</item>
         <item name="android:paddingRight">0.0dip</item>
         <item name="android:layout_marginLeft">0.0dip</item>
