--- a/app/src/main/res/layout/fragment_me.xml
+++ b/app/src/main/res/layout/fragment_me.xml
@@ -8,12 +8,14 @@
         android:layout_width="match_parent"
         android:layout_height="150dp"
         android:gravity="center"
+        android:background="@color/start_review_btn_bg_pressed"
         android:id="@id/login_layout">
 
-        <ImageView
-            android:background="@drawable/login_user"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+        <me.chiying.framelibrary.customview.RoundImageView
+            android:id="@+id/user_avatar_logout"
+            android:src="@drawable/my_defalut_avatar"
+            android:layout_width="60dp"
+            android:layout_height="60dp" />
         <TextView
             android:text="@string/me_logout_text"
             android:layout_marginLeft="15dp"
@@ -26,13 +28,16 @@
         android:layout_height="150dp"
         android:gravity="center"
         android:visibility="gone"
+        android:background="@color/start_review_btn_bg_pressed"
         android:id="@+id/user_layout">
 
-        <ImageView
-            android:background="@drawable/login_user"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+        <me.chiying.framelibrary.customview.RoundImageView
+            android:id="@+id/user_avatar"
+            android:src="@drawable/login_user"
+            android:layout_width="60dp"
+            android:layout_height="60dp" />
         <TextView
+            android:id="@+id/user_name"
             android:text="@string/me_logout_text"
             android:layout_marginLeft="15dp"
             android:layout_width="wrap_content"
